<resources>
    <string name="app_name">phongle-17k3</string>
    <string name="tv_like_number">1</string>
    <string name="tv_item_subject">Item1</string>
    <string name="tv_item_description">description item so 1</string>
    <string name="edt_full_name">Full name</string>
    <string name="tv_enter_detail">Enter your details below to get started</string>
    <string name="btn_login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="btn_login_phone">LOG IN WITH PHONE NUMBER</string>
    <string name="tv_welcome">Welcome to urbi</string>
    <string name="tv_sign_up">New to urbi? Sign up for an account</string>
    <string name="or">or</string>
    <string name="edt_email">Email</string>
    <string name="edt_phone"> Enter mobile number</string>
    <string name="tv_banner">a bike for everyone , always</string>
    <string name="tv_term_services"> I have read and agree with the \n term and conditions. </string>
    <string name="btn_recycler_view_screen">RecyclerView</string>
    <string name="btn_calculator_screen">Calculator</string>
    <string name="btn_login_screen">Log in</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_div">/</string>
    <string name="tv_fail">Số quá giới hạn cho phép !</string>
    <string name="btn_drawer_layout_screen">DrawerLayout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tv_email_leftbar">cristiano_ronaldo@gmail.com</string>
    <string name="tv_item_calculator">Calculator</string>
    <string name="tv_item_recyclerview">RecyclerView</string>
    <string name="tv_main_drawerLayout">This is content main</string>
    <string name="tv_option">Option</string>
    <string name="bt_click">Click</string>
    <string name="edt_input">input</string>
    <string name="file_name">/phongle.txt</string>
    <string name="edt_read_file_fail">Read file fail !</string>
    <string name="edt_write_file_fail">Write file fail !</string>
    <string name="edt_file_not_exist">file not exist</string>
    <string name="tv_person_name">PersonName</string>
    <string name="tv_person_age">20</string>
    <string name="tv_age">Age : </string>
    <string name="tv_company_name">AsianTech</string>
    <string name="tv_company_slogan">Recording History</string>
    <string name="btn_share_preference">SharePreference</string>
    <string name="btn_external_storage">external storge</string>
    <string name="btn_sqlite_screen">sqlite</string>
    <string name="tv_step_for_use">Step 1</string>
    <string name="tv_skip">Skip</string>
    <string name="alert_skip_title">Skip all step</string>
    <string name="alert_skip_message">Do you want to skip guide?</string>
    <string name="btn_update_info">Update</string>
    <string name="edt_edit_name">Name</string>
    <string name="edt_edit_phone">Phone number</string>
    <string name="edt_edit_hometown">Hometown</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_viewpager">ViewPager</string>
    <string name="tv_information_image">Information Image</string>
    <string name="edt_ninepath">ninepath</string>
    <string name="btn_load_image">Load image</string>
    <string name="btn_ninepath">NinePath</string>
    <string name="btn_vector">Vector</string>
    <string name="btn_image_ninepath_vector">Image-Ninepath-Vector</string>
    <string name="tv_username">Username :</string>
    <string name="tv_password">Password :</string>
    <string name="btn_login">Login</string>
    <string name="check_length_username">Username phai lon hon 5 va ngan hon 24 ki tu !</string>
    <string name="at_least_uppercase_username">Username phai co it nhat 1 ki tu viet hoa !</string>
    <string name="non_special_char_username">Username khong duoc chua ki tu dac biet !</string>
    <string name="non_space_username">Username khong duoc chua khoang trang !</string>
    <string name="at_most_two_num_username">Username chi duoc co nhieu nhat 2 ki tu so !</string>
    <string name="non_uppercase_or_lowercase">Username phan biet chu hoa chu thuong !</string>
    <string name="check_difference_password">Password khong duoc trung voi username !</string>
    <string name="check_length_password">Password phai dai hon 7 ki tu !</string>
    <string name="at_least_special_char_or_num_password">Password phai co it nhat 1 ki tu dac biet hoac ki tu so !</string>
    <string name="at_least_three_uppercase_password">Password phai co it nhat 3 ki tu viet hoa !</string>
    <string name="non_repeat_password">Username khong duoc chua ki tu lap lai qua 2 lan !</string>
    <string name="non_space_password">Password khong duoc chua khoang trang!</string>
    <string name="btn_unit_test">unit test</string>
</resources>
