<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp">

    <Button
        android:id="@+id/btnLoadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_load_image" />

    <Button
        android:id="@+id/btnNinePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ninepath" />

    <Button
        android:id="@+id/btnVector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_vector" />
</LinearLayout>
