<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_welcome"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bt_login_phone"
        android:text="@string/btn_login_facebook"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_centerInParent="true"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/snow"
            android:gravity="center"
            android:text="@string/or" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnLoginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bt_login_facebook"
        android:text="@string/btn_login_phone"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_urbi"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
