<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/edtNumberA"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/bg_edt_input"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvOperator"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/edtNumberB"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/bg_edt_input"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_add"
            android:textSize="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_sub"
            android:textSize="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_mul"
            android:textSize="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/btn_div"
            android:textSize="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18dp" />
</LinearLayout>
