<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="3dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llHeaderItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/tv_item_subject"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgLike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_img_like"
                android:src="@drawable/ic_like" />

            <ImageView
                android:id="@+id/imgDislike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_img_dislike"
                android:src="@drawable/ic_dislike" />

            <TextView
                android:id="@+id/tvLikeNumber"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/tv_like_number"
                android:textSize="13dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llHeaderItem"
            android:maxLines="2"
            android:text="@string/tv_item_description" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
